acknowledging the use of AI

--- a/Practical Assignment 1.ipynb
+++ b/Practical Assignment 1.ipynb
@@ -13,9 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **DNSC6314 Assignment 1 by Chipo Jaya: G44454879**\n",
-        "\n",
-        "## <font color=\"red\">Note: acknowledge and cite GenAI if used.</font>\n"
+        "# **DNSC6314 Assignment 1 by Chipo Jaya: G44454879**"
       ],
       "metadata": {
         "id": "j__1ZiLtX1Ju"
@@ -29,7 +27,7 @@
         "id": "55a91441"
       },
       "source": [
-        "## This assignment usese Capital Bikeshare Data\n",
+        "## This assignment uses Capital Bikeshare Data\n",
         "https://ride.capitalbikeshare.com/system-data\n",
         "\n",
         "Data is from three months: 2024/02, 2024/03 and 2024/04."
@@ -55,13 +53,12 @@
       "metadata": {
         "id": "z6PSK4jES9P1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "0c42374a-7d3c-41c0-e531-3c3d325e5485"
       },
       "id": "z6PSK4jES9P1",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,14 +77,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "0SkZxdkCFkOL",
         "outputId": "4cac92b6-af32-4ccc-9d86-ea4466fd3152"
       },
       "id": "0SkZxdkCFkOL",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +116,7 @@
         "id": "X4MzX_C0WHiq"
       },
       "id": "X4MzX_C0WHiq",
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,14 +126,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ArlHLZxhGYJW",
         "outputId": "266989fa-ca53-427a-9781-6697d36cd6c1"
       },
       "id": "ArlHLZxhGYJW",
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +160,7 @@
         "outputId": "a37a0196-a22c-4d4a-b367-73ec12894a18"
       },
       "id": "c4387QeZVhRb",
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,14 +534,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8-sY4iV8XoNK",
         "outputId": "56c83cdd-aa5c-412d-cb92-527052efdc18"
       },
       "id": "8-sY4iV8XoNK",
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +613,7 @@
         "outputId": "f4771a4b-018f-43c6-9b38-24337ebeb116"
       },
       "id": "y3VxzXhcZn-k",
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +748,7 @@
         "outputId": "ca9d0d8d-cf4f-4bf4-e9ca-71c67682c4b1"
       },
       "id": "SRtAGqpCc_Wj",
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,7 +883,7 @@
         "outputId": "e7fbd8bb-073c-4da2-c9d0-a1af24d3d1e7"
       },
       "id": "UwgJLIMcf9SB",
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1310,7 @@
         "outputId": "5f6ce3f8-984e-4924-ef43-4c9996a068a1"
       },
       "id": "JGyrEtXZhnuH",
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1343,7 +1337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "id": "91178cea",
       "metadata": {
         "id": "91178cea",
@@ -1799,14 +1793,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "d0I3EqWpi5zI",
         "outputId": "3031b4ff-0466-4d1a-b3aa-fea098e82f05"
       },
       "id": "d0I3EqWpi5zI",
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1868,7 +1861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "id": "82a937c9",
       "metadata": {
         "id": "82a937c9"
@@ -1911,7 +1904,7 @@
         "outputId": "646ac087-59da-43cb-9821-df49d1051b42"
       },
       "id": "LceO3zBEq0-q",
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2561,7 +2554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "id": "3e5059bf",
       "metadata": {
         "id": "3e5059bf",
@@ -2611,7 +2604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "id": "0217869f",
       "metadata": {
         "id": "0217869f",
@@ -3068,7 +3061,7 @@
         "id": "mlrJkPM0KCDw"
       },
       "id": "mlrJkPM0KCDw",
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3088,7 +3081,7 @@
         "outputId": "a8dbcfac-3e46-4dee-dc48-8160bd92b2fc"
       },
       "id": "xgC0m4wVKOFk",
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3468,7 +3461,7 @@
         "id": "1hMvFb1AzuyI"
       },
       "id": "1hMvFb1AzuyI",
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3487,7 +3480,7 @@
         "outputId": "8acb8799-9e48-4b43-c376-45e9330f9442"
       },
       "id": "pl3n5-m_Que5",
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3937,14 +3930,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "09tIAZKkJR8D",
         "outputId": "db3c66c8-9530-4ad5-b7d6-ee6d4e28e5b5"
       },
       "id": "09tIAZKkJR8D",
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3967,7 +3959,7 @@
         "id": "u4X-eEZPUZqV"
       },
       "id": "u4X-eEZPUZqV",
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3997,7 +3989,7 @@
         "outputId": "39c7f68a-bef6-4b4b-eca5-ed6e2f4a70a7"
       },
       "id": "CjMzUvqIMiDr",
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4389,7 +4381,7 @@
         "id": "LoZ8pof6HmHQ"
       },
       "id": "LoZ8pof6HmHQ",
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4408,7 +4400,7 @@
         "outputId": "0b1b1845-b6d2-4663-a348-3eaa7d8366b2"
       },
       "id": "kEDIR7Z7RFAl",
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4855,14 +4847,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8Sr0AfIEC0aS",
         "outputId": "935a7bca-7ced-47a7-fd61-2580b3dd73a5"
       },
       "id": "8Sr0AfIEC0aS",
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4885,7 +4876,7 @@
         "id": "CrZQDvDFU2_F"
       },
       "id": "CrZQDvDFU2_F",
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4915,7 +4906,7 @@
         "outputId": "38e3d638-81f1-4bbf-8930-b8f5f1d32da0"
       },
       "id": "BhtbRDQdMx5S",
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5319,7 +5310,7 @@
         "id": "SC3wTMKACkqX"
       },
       "id": "SC3wTMKACkqX",
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5338,7 +5329,7 @@
         "outputId": "1d82e147-3741-46bd-8acc-1a479ae20a8e"
       },
       "id": "4sUlVMZARO39",
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5786,13 +5777,12 @@
       "metadata": {
         "id": "7600tn2-Hn94",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "1b9acae3-8cd2-4cba-a9ef-fba8c71447cc"
       },
       "id": "7600tn2-Hn94",
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5815,7 +5805,7 @@
         "id": "WmVrwUlJU7Aj"
       },
       "id": "WmVrwUlJU7Aj",
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5845,7 +5835,7 @@
         "outputId": "0f48ad43-0f31-4f6f-8104-15b30eda35eb"
       },
       "id": "b0YHAXBYM5t5",
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6261,7 +6251,7 @@
         "id": "3F7wdq3fHpAq"
       },
       "id": "3F7wdq3fHpAq",
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6280,7 +6270,7 @@
         "outputId": "505c2552-8dc2-453e-b436-0520c08faf59"
       },
       "id": "vtyR-ae-RX3X",
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6727,14 +6717,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "nbSZGMM9CcV8",
         "outputId": "1e5e23b6-2791-465d-d678-48750ddefa34"
       },
       "id": "nbSZGMM9CcV8",
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6757,7 +6746,7 @@
         "id": "LSVnY-ImVBmu"
       },
       "id": "LSVnY-ImVBmu",
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6787,7 +6776,7 @@
         "outputId": "32ea5a85-2188-4d46-f3aa-32ce6515b7e4"
       },
       "id": "-N3NIOegNIuT",
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7264,7 +7253,7 @@
         "id": "kiIn86TRCML5"
       },
       "id": "kiIn86TRCML5",
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7283,7 +7272,7 @@
         "outputId": "f7d8ea0e-7ac3-46c8-de26-2d57b1493352"
       },
       "id": "642CNfT7Rcq-",
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7731,13 +7720,12 @@
       "metadata": {
         "id": "fDCYheJ6HqTs",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "06704f0d-6d0c-4ade-9492-be748acb54a0"
       },
       "id": "fDCYheJ6HqTs",
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7760,7 +7748,7 @@
         "id": "08cDv7JRVFaW"
       },
       "id": "08cDv7JRVFaW",
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7782,7 +7770,7 @@
         "id": "yA-TJVUqSfpW"
       },
       "id": "yA-TJVUqSfpW",
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7807,7 +7795,7 @@
         "id": "3W01yX5QSgkS"
       },
       "id": "3W01yX5QSgkS",
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7834,7 +7822,7 @@
         "outputId": "7d86a846-6992-450a-d3f0-eaf7aca814de"
       },
       "id": "VwikMdSzB_vg",
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7865,7 +7853,7 @@
         "id": "ynTS-LY3HulS"
       },
       "id": "ynTS-LY3HulS",
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7885,15 +7873,14 @@
         "id": "9cW8owlfHS8X"
       },
       "id": "9cW8owlfHS8X",
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "#Reference\n",
-        "\n",
-        "\"DeepSeek AI (Version 1.0, developed by DeepSeek AI, accessed January 28, 2025)\" was consulted during the research process."
+        "##### <font color=\"red\">\"DeepSeek AI (Version 1.0, developed by DeepSeek AI, accessed January 28, 2025)\" was consulted during the research process.</font>\n"
       ],
       "metadata": {
         "id": "w5iPkA1LchMG"
