--- a/Practical Assignment 1.ipynb
+++ b/Practical Assignment 1.ipynb
@@ -7780,10 +7780,10 @@
         "mse_data = {\n",
         "    'Features': [\n",
         "        'temp',\n",
-        "        'temp + precip',\n",
-        "        'temp + precip + windspeed',\n",
-        "        'temp + precip + windspeed + uvindex',\n",
-        "        'temp + precip + windspeed + uvindex + icon_dummies'\n",
+        "        'temp,precip',\n",
+        "        'temp,precip, + windspeed',\n",
+        "        'temp,precip,windspeed,uvindex',\n",
+        "        'temp,precip,windspeed,uvindex,icon_dummies'\n",
         "    ],\n",
         "    'Train_MSE': [train_mse_task1, train_mse_task2, train_mse_task3, train_mse_task4, train_mse_task5],\n",
         "    'Test_MSE': [test_mse_task1, test_mse_task2, test_mse_task3, test_mse_task4, test_mse_task5]\n",
