--- a/Practical Assignment 1.ipynb
+++ b/Practical Assignment 1.ipynb
@@ -11704,12 +11704,12 @@
         "X"
       ],
       "metadata": {
-        "id": "8ARMBouWcJMR",
-        "outputId": "b2bc04f1-2c47-4087-ccea-a1a6bc833661",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "8ARMBouWcJMR",
+        "outputId": "b2bc04f1-2c47-4087-ccea-a1a6bc833661"
       },
       "id": "8ARMBouWcJMR",
       "execution_count": 224,
@@ -12107,11 +12107,11 @@
         "test_mse_task1 = test_mse"
       ],
       "metadata": {
-        "id": "Zhiqj4GScpMy",
-        "outputId": "78b0cb7c-46de-4a42-aef8-0a922f1fb819",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zhiqj4GScpMy",
+        "outputId": "78b0cb7c-46de-4a42-aef8-0a922f1fb819"
       },
       "id": "Zhiqj4GScpMy",
       "execution_count": 225,
@@ -12145,12 +12145,12 @@
         "X"
       ],
       "metadata": {
-        "id": "aATAJGu2co6a",
-        "outputId": "aa110f93-ec83-431f-b816-c500c3a85ffc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "aATAJGu2co6a",
+        "outputId": "aa110f93-ec83-431f-b816-c500c3a85ffc"
       },
       "id": "aATAJGu2co6a",
       "execution_count": 226,
@@ -12560,11 +12560,11 @@
         "test_mse_task2 = test_mse"
       ],
       "metadata": {
-        "id": "-kw9exyncJmE",
-        "outputId": "e5dacde7-a1ec-4258-da40-7d45a189c29c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-kw9exyncJmE",
+        "outputId": "e5dacde7-a1ec-4258-da40-7d45a189c29c"
       },
       "id": "-kw9exyncJmE",
       "execution_count": 227,
@@ -12598,12 +12598,12 @@
         "X"
       ],
       "metadata": {
-        "id": "uacx4kRVcoZn",
-        "outputId": "07962704-b9e9-47ef-a630-22b77eb072f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "uacx4kRVcoZn",
+        "outputId": "07962704-b9e9-47ef-a630-22b77eb072f0"
       },
       "id": "uacx4kRVcoZn",
       "execution_count": 228,
@@ -13025,11 +13025,11 @@
         "test_mse_task3 = test_mse"
       ],
       "metadata": {
-        "id": "_IeUX4eocniL",
-        "outputId": "ab8d987b-10a2-4c3b-d7e9-c83526b90dae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_IeUX4eocniL",
+        "outputId": "ab8d987b-10a2-4c3b-d7e9-c83526b90dae"
       },
       "id": "_IeUX4eocniL",
       "execution_count": 229,
@@ -13063,12 +13063,12 @@
         "X"
       ],
       "metadata": {
-        "id": "vDz-l-xWcKEI",
-        "outputId": "b5bef5f1-67df-4819-ce54-618266330cd0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "vDz-l-xWcKEI",
+        "outputId": "b5bef5f1-67df-4819-ce54-618266330cd0"
       },
       "id": "vDz-l-xWcKEI",
       "execution_count": 230,
@@ -13502,11 +13502,11 @@
         "test_mse_task4 = test_mse"
       ],
       "metadata": {
-        "id": "pnGzzKgWcKi6",
-        "outputId": "143909d6-5531-4a81-e2ad-5ed123d88da4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pnGzzKgWcKi6",
+        "outputId": "143909d6-5531-4a81-e2ad-5ed123d88da4"
       },
       "id": "pnGzzKgWcKi6",
       "execution_count": 231,
@@ -13540,12 +13540,12 @@
         "X"
       ],
       "metadata": {
-        "id": "l7Ur4YoNcLPv",
-        "outputId": "b874a6fd-59b7-432d-dcfc-2c78a12e4c83",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "l7Ur4YoNcLPv",
+        "outputId": "b874a6fd-59b7-432d-dcfc-2c78a12e4c83"
       },
       "id": "l7Ur4YoNcLPv",
       "execution_count": 232,
@@ -14040,11 +14040,11 @@
         "test_mse_task5 = test_mse"
       ],
       "metadata": {
-        "id": "-2III_JQdfbD",
-        "outputId": "872bafc9-d0ff-4c5a-b7f3-7dcab21c9955",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-2III_JQdfbD",
+        "outputId": "872bafc9-d0ff-4c5a-b7f3-7dcab21c9955"
       },
       "id": "-2III_JQdfbD",
       "execution_count": 233,
@@ -14090,12 +14090,12 @@
         "mse_df"
       ],
       "metadata": {
-        "id": "QDMsBh54cLuO",
-        "outputId": "58dd97f1-2cc4-4747-9fca-4ff12f6c900c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "QDMsBh54cLuO",
+        "outputId": "58dd97f1-2cc4-4747-9fca-4ff12f6c900c"
       },
       "id": "QDMsBh54cLuO",
       "execution_count": 234,
@@ -14469,12 +14469,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "MiYZ-SVXfsDO",
-        "outputId": "8602deba-0194-4087-ef75-da9f7874b204",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 824
-        }
+        },
+        "id": "MiYZ-SVXfsDO",
+        "outputId": "8602deba-0194-4087-ef75-da9f7874b204"
       },
       "id": "MiYZ-SVXfsDO",
       "execution_count": 235,
@@ -14502,14 +14502,20 @@
       "id": "T-j1Vw1zbBkF"
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Based on the above plot, the best combination of features for predicting DO_ct in linear regression is:\n",
+        "**temp, precip, windspeed, uvindex**\n",
+        "\n",
+        "Why?\n",
+        "* This combination has the lowest test MSE (62.987675).\n",
+        "* The training and test MSE are also reasonably close, so the model generalizes well for other data.\n",
+        "* Aftre these 4 features, adding more features leads to overfitting, as shown by the  test MSE increase when icon is added."
+      ],
       "metadata": {
-        "id": "WZu3XtwlcMFz"
+        "id": "me2765HfsGyl"
       },
-      "id": "WZu3XtwlcMFz",
-      "execution_count": 235,
-      "outputs": []
+      "id": "me2765HfsGyl"
     },
     {
       "cell_type": "markdown",
