--- a/Practical_Assignment_2_v2.ipynb
+++ b/Practical_Assignment_2_v2.ipynb
@@ -19,7 +19,8 @@
         "\n",
         "- Data is from three months: **2024/02, 2024/03 and 2024/04.**\n",
         "\n",
-        "## <font color=\"red\"> Note: acknowledge and cite GenAI if used <font>"
+        "## <font color=\"red\"> Note: acknowledgement of GenAI used <font>\n",
+        "\"DeepSeek AI (Version 1.0, developed by DeepSeek AI, accessed February 13, 2025)\" was consulted during the research process."
       ],
       "metadata": {
         "id": "j__1ZiLtX1Ju"
@@ -47,13 +48,12 @@
       "metadata": {
         "id": "z6PSK4jES9P1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "82a68407-6764-4841-cb05-201ce22ac807"
       },
       "id": "z6PSK4jES9P1",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,14 +72,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "UVfJG9h39pz1",
         "outputId": "ba4bc78b-0ccf-4279-e83d-e3c664d663c2"
       },
       "id": "UVfJG9h39pz1",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +111,7 @@
         "id": "-GoO-QFRVjX0"
       },
       "id": "-GoO-QFRVjX0",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +129,7 @@
         "id": "X4MzX_C0WHiq"
       },
       "id": "X4MzX_C0WHiq",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +153,7 @@
         "outputId": "763234c7-3b95-4f10-e064-38c6173bcb1c"
       },
       "id": "8-sY4iV8XoNK",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +592,7 @@
         "outputId": "3716c1a5-81d4-4266-e4f2-85c593771cbd"
       },
       "id": "y3VxzXhcZn-k",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +727,7 @@
         "outputId": "bb4fa74d-b2a6-4e44-c81f-0e5b86d855b8"
       },
       "id": "SRtAGqpCc_Wj",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +860,7 @@
         "outputId": "8f788e61-e735-4895-a607-61c89b8cc687"
       },
       "id": "UwgJLIMcf9SB",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1289,7 +1288,7 @@
         "outputId": "89c0e7ea-83e2-4570-fa9c-c86324b57692"
       },
       "id": "JGyrEtXZhnuH",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1330,7 +1329,7 @@
         "outputId": "c4f9a5ae-b6b4-49e9-bb2a-87ffb00bb193"
       },
       "id": "gQqhEc9_0ca0",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1774,14 +1773,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "d0I3EqWpi5zI",
         "outputId": "5881e5ca-dc26-4c0d-fa97-0d4ec95ade3b"
       },
       "id": "d0I3EqWpi5zI",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1846,13 +1844,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "82a937c9",
       "metadata": {
         "id": "82a937c9",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "1892adc9-3f56-495c-ab90-dd2ca6c7cc07"
       },
@@ -1931,7 +1928,7 @@
         "outputId": "2f5c9b43-a3c3-4fe8-d5f7-da28309590d3"
       },
       "id": "LceO3zBEq0-q",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2581,7 +2578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "3e5059bf",
       "metadata": {
         "id": "3e5059bf",
@@ -2630,7 +2627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "0217869f",
       "metadata": {
         "id": "0217869f",
@@ -3110,7 +3107,7 @@
         "id": "g58Q_LxwzM4K"
       },
       "id": "g58Q_LxwzM4K",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3124,7 +3121,7 @@
         "id": "9UKx6_PVV_2d"
       },
       "id": "9UKx6_PVV_2d",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3138,7 +3135,7 @@
         "id": "jHKYbTOQzfFc"
       },
       "id": "jHKYbTOQzfFc",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3173,7 +3170,7 @@
         "outputId": "1f340496-0269-4377-f4ac-53654b05c45d"
       },
       "id": "Ur-h62Scsg2G",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3520,7 +3517,7 @@
         "id": "GyiYT4_Ay053"
       },
       "id": "GyiYT4_Ay053",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3539,7 +3536,7 @@
         "id": "ACfp_frvJ_zX"
       },
       "id": "ACfp_frvJ_zX",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3560,7 +3557,7 @@
         "outputId": "15e94868-21ef-4822-cff9-08dd7e814661"
       },
       "id": "qUBkKLQJuuEh",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4000,14 +3997,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vX03VWh7YC2R",
         "outputId": "7d02a7c4-78df-495f-9a08-643425eabe90"
       },
       "id": "vX03VWh7YC2R",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4031,7 +4027,7 @@
         "id": "lq_4UquXut7V"
       },
       "id": "lq_4UquXut7V",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4043,14 +4039,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "l6JKxANUutwF",
         "outputId": "7252b6e2-63a2-4863-c493-643b5cbcf7a1"
       },
       "id": "l6JKxANUutwF",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4096,14 +4091,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9h4Z4WSw1nnm",
         "outputId": "c50b7d35-08a0-4057-973b-481dc72d5a1e"
       },
       "id": "9h4Z4WSw1nnm",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4158,7 +4152,7 @@
         "outputId": "81d8dc74-038d-46e6-8423-20f1a58e33a1"
       },
       "id": "hStslwTD3pPi",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4196,14 +4190,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pYYr7eZR4nWg",
         "outputId": "f1908cad-ef1e-4214-80d3-a663650f0446"
       },
       "id": "pYYr7eZR4nWg",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4235,7 +4228,7 @@
         "id": "8radQal86EdR"
       },
       "id": "8radQal86EdR",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4256,7 +4249,7 @@
         "outputId": "94312dba-d17d-4af6-a2f4-2662d981b504"
       },
       "id": "he8ElK6n5Dxl",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4696,14 +4689,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1xqjFRQoaGze",
         "outputId": "18b8f0f8-faef-4a69-b844-42591e230857"
       },
       "id": "1xqjFRQoaGze",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4727,7 +4719,7 @@
         "id": "tKsMlZSn5DqW"
       },
       "id": "tKsMlZSn5DqW",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4739,14 +4731,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "V3SBRRuY_j2r",
         "outputId": "8190d4c1-3f68-4363-ef1d-accf72968cf6"
       },
       "id": "V3SBRRuY_j2r",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4783,13 +4774,12 @@
       "metadata": {
         "id": "lMEymotoMV7r",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "443bcb5d-e985-41ce-cbd4-50012dcf458e"
       },
       "id": "lMEymotoMV7r",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4828,7 +4818,7 @@
         "id": "p5UQYPBDCG07"
       },
       "id": "p5UQYPBDCG07",
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4849,7 +4839,7 @@
         "outputId": "e58d43d8-712f-45b9-c994-7eab514735a5"
       },
       "id": "TAJJU8OFA8As",
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5289,14 +5279,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "3_2H2g6yctDI",
         "outputId": "b8521397-7266-4e55-92c8-a04587400496"
       },
       "id": "3_2H2g6yctDI",
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5320,7 +5309,7 @@
         "id": "bxbjZobHA78F"
       },
       "id": "bxbjZobHA78F",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5332,14 +5321,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Z3q_D5J0A7xR",
         "outputId": "fb317211-3ed8-4f6e-b760-4f5aa6cc6b55"
       },
       "id": "Z3q_D5J0A7xR",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5378,7 +5366,7 @@
         "outputId": "5bd615c0-10c6-476f-cb77-ce24b14428fd"
       },
       "id": "aZewUyKfEhBO",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5818,14 +5806,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uakQQGTKdVY0",
         "outputId": "6302d17a-8b79-4bba-9a65-306cbce81303"
       },
       "id": "uakQQGTKdVY0",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5849,7 +5836,7 @@
         "id": "nCM7wKBWCOa4"
       },
       "id": "nCM7wKBWCOa4",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5861,14 +5848,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lIW6ZRtFB9K-",
         "outputId": "eb0f8ad8-24b5-4762-bb63-bc50a496a86a"
       },
       "id": "lIW6ZRtFB9K-",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5903,14 +5889,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "y2d5NP98Clvm",
         "outputId": "e62f3ea5-e410-4fb8-9e16-e2eb7ccd9a7d"
       },
       "id": "y2d5NP98Clvm",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5938,13 +5923,12 @@
       "metadata": {
         "id": "EA6TnNVUMNEW",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "c8fa5c9a-52b4-4eed-d720-9966f124f6d7"
       },
       "id": "EA6TnNVUMNEW",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
